# Strend

./: .dockerignore  .env.prod  .gitignore  Dockerfile  StockMarket_changes.ipynb  applogs.txt  applogs2.txt  applogs3.txt  applogs5.txt  before_deply.txt  create_learnings_table.py  docker-compose.yml  final_uv_logs.txt  format.txt  main.py  pyproject.toml  restore_8.py  server_log.txt  start.sh  temp.txt  test_excel_agent.py  test_scraper.py
.claude/spec_document/: spec-context-overflow.md  spec-market-depth.md
.github/workflows/: daily_stock_scan.yml
29-01-2026/: checkpoint.json  checkpoint_v2.json
Diagrams/: desktop.ini
Documentations/: Strend_Presentation (1).pptx
cache/strategy/: strategy_2026-05-06_slot_1_0940_0942.xlsx  strategy_2026-05-06_slot_2_0945_0946.xlsx  strategy_2026-05-06_slot_3_1002_1003.xlsx  strategy_2026-05-06_slot_4_1030_1031.xlsx  strategy_2026-05-06_slot_4_1325_1443.xlsx  strategy_2026-05-06_slot_5_1155_1156.xlsx  ticker_mapping.json
dataset/: slot_1.csv  slot_2.csv  slot_3.csv  slot_4.csv  slot_5.csv  slot_6.csv  slot_7.csv
playit_data/: pulse_news.json
playit_data/2026-01-29/: pulse_news.json
playit_data/2026-01-30/: pulse_news.json
playit_data/2026-02-01/: pulse_news.json
playit_data/2026-02-02/: pulse_news.json
playit_data/2026-02-03/: pulse_news.json
playit_data/2026-02-04/: pulse_news.json
playit_data/2026-02-05/: pulse_news.json
playit_data/2026-02-06/: pulse_news.json
playit_data/2026-02-09/: pulse_news.json
playit_data/2026-02-10/: pulse_news.json
playit_data/2026-02-12/: pulse_news.json
playit_data/2026-04-03/: pulse_news.json
src/: req.txt
src/agent/: bot.py  (+1 more)
temp/: temp_agent_ws.py  temp_bot.py  temp_invoke_agent.py
(+135 files in other folders)
