[project]
name = "strend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "bs4>=0.0.2",
    "crontab>=1.0.5",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain-groq>=1.1.1",
    "pandas-ta>=0.4.71b0",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "ta-lib>=0.6.8",
    "uvicorn[standard]>=0.40.0",
    "wsproto>=1.3.2",
    "yfinance>=1.0",
]