[project]
name = "strend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "bs4>=0.0.2",
    "crontab>=1.0.5",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "langchain-groq>=1.1.1",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "uvicorn[standard]>=0.40.0",
    "wsproto>=1.3.2",
    "yfinance>=1.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "langchain-nvidia-ai-endpoints>=1.2.1",
]
